# polyany

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: labeler.yml  pull_request_template.md
.github/workflows/: bumpversion.yml  docs.yml  generic.yml  pr_label.yml  release.yml  tests.yml
api/: index.html
css/: extra.css
docs/: api.md  getting_started.md  index.md  installation.md
docs/css/: extra.css
docs/overrides/partials/: header.html
getting_started/: index.html
installation/: index.html
search/: search_index.json
src/polyany/: __init__.py  base.py  exponents.py  polynomial.py  types.py
tests/: smoke_test.py  test_creation.py  test_operations.py  test_polynomial.py
