[project]
name = "polyany"
version = "0.1.0"
description = "A Python package for algebraic manipulation of multivariate polynomials"
readme = "README.md"
authors = [
    { name = "Cristiano Agulhari", email = "agulhari@utfpr.edu.br" },
    { name = "Esdras Battosti", email = "esdras.2019@alunos.utfpr.edu.br" },
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["polynomials", "multivariate", "algebra"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
]

[project.urls]
Homepage = "https://rolmip.github.io/polyany/"
Documentation = "https://rolmip.github.io/polyany/"
Repository = "https://github.com/rolmip/polyany"
Issues = "https://github.com/rolmip/polyany/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pre-commit>=4.2.0",
    "pyright[nodejs]>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]
docs = [
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.29.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FIX",
    "I",
    "ICN",
    "ISC",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TRY",
    "UP",
    "W",
    "YTT",
    "RUF",
    "N",
    "NPY",
]
ignore = ["T201", "COM812", "TD003", "FIX002", "TC002", "UP038", "UP040"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["polyany"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.13"
include = ["src", 'tests']
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short --doctest-modules"
pythonpath = ["src"]
testpaths = ["tests", "src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
